--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "oci-grafana-plugin",
+  "name": "vertica-grafana-plugin",
   "private": true,
-  "version": "1.0.2",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "test": "jest src/ --coverage"
   },
   "author": "",
-  "license": "UPL",
+  "license": "Apache 2.0",
   "engines": {
     "node": ">6.10.0"
   },
