--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,18 @@
-# Compiled Object files, Static and Dynamic libs (Shared Objects)
-*.o
-*.a
-*.so
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Folders
-_obj
-_test
+node_modules/
 
-# Architecture specific extensions/prefixes
-*.[568vq]
-[568vq].out
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-*.cgo1.go
-*.cgo2.c
-_cgo_defun.c
-_cgo_gotypes.go
-_cgo_export.*
-
-_testmain.go
-
-*.test
-*.prof
-
-/vendor/**
-!/vendor/vendor.json
-.DS_Store
-*.swp
-
-node_modules
 coverage/
 dist/test
 .env
