--- a/package.json
+++ b/package.json
@@ -1,29 +1,54 @@
 {
   "name": "vertica-grafana-datasource",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.0.1",
   "description": "Vertica Data Source Plugin for Grafana",
+  "main": "index.js",
   "scripts": {
-    "build": "grafana-toolkit plugin:build",
-    "test": "grafana-toolkit plugin:test",
-    "dev": "grafana-toolkit plugin:dev",
-    "watch": "grafana-toolkit plugin:dev --watch"
+    "buildjs": "./node_modules/.bin/grunt",
+    "lint": "./node_modules/.bin/eslint frontend/",
+    "fix": "./node_modules/.bin/eslint --fix frontend/",
+    "bump": "./node_modules/.bin/grunt bump",
+    "test": "jest frontend/ --coverage"
   },
   "author": "",
   "license": "Apache 2.0",
   "engines": {
-    "node": ">=12 <13"
+    "node": ">6.10.0"
   },
   "engineStrict": true,
   "devDependencies": {
-    "@grafana/data": "7.0.1",
-    "@grafana/runtime": "7.0.1",
-    "@grafana/toolkit": "7.0.1",
-    "@grafana/ui": "7.0.1"
+    "babel": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "grunt": "^1.0.4",
+    "grunt-babel": "~6.0.0",
+    "grunt-bump": "^0.8.0",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^2.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-execute": "~0.2.2",
+    "grunt-systemjs-builder": "^1.0.0",
+    "jest": "^24.5.0",
+    "jsdom": "~9.12.0",
+    "load-grunt-tasks": "^3.5.2",
+    "prunk": "^1.3.0",
+    "q": "^1.5.0"
   },
   "dependencies": {
-    "react-ace": "7.0.5",
-    "yarn": "^1.22.4",
-    "@types/lodash": "latest"
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-es2015-for-of": "^6.6.0",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^5.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "lodash": "^4.17.13",
+    "update": "^0.7.4"
   }
 }
